--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -58,7 +58,6 @@ deny 107.174.83.58;
 deny 107.175.31.193;
 deny 107.189.10.175;
 deny 107.189.10.20;
-deny 107.189.1.111;
 deny 107.189.11.111;
 deny 107.189.11.113;
 deny 107.189.1.160;
@@ -125,6 +124,7 @@ deny 109.199.101.106;
 deny 109.199.101.134;
 deny 109.199.105.142;
 deny 109.228.160.190;
+deny 109.248.11.6;
 deny 109.69.67.17;
 deny 109.70.100.1;
 deny 109.70.100.2;
@@ -1145,7 +1145,6 @@ deny 2605:6400:30:f5db:25a1:b884:ef2d:8818;
 deny 2605:6400:30:f623:5a78:29a6:8492:27b0;
 deny 2605:6400:30:f671:3fc7:4bb4:ca18:86fa;
 deny 2605:6400:30:f753:891d:ee77:e97c:741a;
-deny 2605:6400:30:f77f:f41c:2bce:7d61:210e;
 deny 2605:6400:30:f78b::2;
 deny 2605:6400:30:f7c0:8511:b113:ca11:9baa;
 deny 2605:6400:30:f7ca::2;
@@ -1300,7 +1299,6 @@ deny 2a02:418:6017::148;
 deny 2a02:898:218::1;
 deny 2a02:898:218::2;
 deny 2a02:c204:2195:2012::1;
-deny 2a02:c204:2220:8710::1;
 deny 2a02:c206:2240:3516::1;
 deny 2a02:c206:2240:5051::1;
 deny 2a02:c206:2240:5054::1;
@@ -1605,6 +1603,7 @@ deny 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
+deny 2a0d:8140:1fff:4a9a::1;
 deny 2a0d:bbc7:0:1::10a;
 deny 2a0d:bbc7:0:1::1df;
 deny 2a0d:bbc7:0:1::254;
@@ -1619,6 +1618,7 @@ deny 2a0d:bbc7:0:1::3cc;
 deny 2a0d:bbc7:0:1::3d5;
 deny 2a0d:bbc7:0:1::7f;
 deny 2a0d:c2c0:1:4::2;
+deny 2a0d:c580:1:3:95::1;
 deny 2a0e:1d80:13:51e8::1;
 deny 2a0e:1d80:17:6f8d::1;
 deny 2a0e:4005:1002:ffff:185:40:4:100;
@@ -1744,6 +1744,7 @@ deny 45.128.133.242;
 deny 45.130.60.248;
 deny 45.132.246.245;
 deny 45.134.225.36;
+deny 45.137.99.14;
 deny 45.138.16.107;
 deny 45.138.16.113;
 deny 45.138.16.178;
@@ -1876,6 +1877,7 @@ deny 5.255.99.5;
 deny 5.2.67.226;
 deny 5.2.72.110;
 deny 5.2.79.190;
+deny 5.34.182.203;
 deny 54.36.101.21;
 deny 54.36.209.253;
 deny 54.36.209.254;
@@ -1925,7 +1927,6 @@ deny 82.118.248.205;
 deny 82.197.182.161;
 deny 82.221.128.191;
 deny 82.221.131.5;
-deny 82.221.131.86;
 deny 82.221.139.190;
 deny 83.217.9.73;
 deny 83.96.213.63;
@@ -1998,7 +1999,6 @@ deny 94.16.121.91;
 deny 94.230.208.147;
 deny 94.230.208.148;
 deny 94.72.103.33;
-deny 94.72.98.8;
 deny 94.75.225.81;
 deny 95.128.43.164;
 deny 95.142.161.63;
