--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -2,8 +2,6 @@ allow 102.130.113.9;
 allow 102.130.117.167;
 allow 102.130.127.117;
 allow 102.211.56.102;
-allow 102.211.56.12;
-allow 102.211.56.13;
 allow 102.211.56.250;
 allow 103.109.101.105;
 allow 103.126.161.54;
@@ -126,7 +124,6 @@ allow 109.199.101.106;
 allow 109.199.101.134;
 allow 109.199.105.142;
 allow 109.228.160.190;
-allow 109.248.11.6;
 allow 109.69.67.17;
 allow 109.70.100.1;
 allow 109.70.100.2;
@@ -154,6 +151,7 @@ allow 128.31.0.13;
 allow 130.193.10.21;
 allow 130.193.15.186;
 allow 130.193.15.79;
+allow 135.225.96.187;
 allow 136.244.111.163;
 allow 138.59.18.110;
 allow 139.180.160.15;
@@ -694,11 +692,13 @@ allow 194.15.113.118;
 allow 194.15.115.212;
 allow 194.163.130.99;
 allow 194.163.157.49;
+allow 194.26.192.249;
 allow 194.26.192.77;
 allow 194.53.137.156;
 allow 195.160.220.104;
 allow 195.176.3.23;
 allow 195.176.3.24;
+allow 195.240.214.116;
 allow 195.47.238.176;
 allow 195.47.238.177;
 allow 195.47.238.178;
@@ -1012,7 +1012,6 @@ allow 23.154.177.10;
 allow 23.154.177.11;
 allow 23.154.177.12;
 allow 23.154.177.13;
-allow 23.154.177.14;
 allow 23.154.177.15;
 allow 23.154.177.16;
 allow 23.154.177.17;
@@ -1297,6 +1296,7 @@ allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a01:7e01::f03c:95ff:fe64:90e3;
 allow 2a02:16d0:0:5::1;
+allow 2a02:2970:1001::4b;
 allow 2a02:2b88:2:6ce::1;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
@@ -1359,7 +1359,6 @@ allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:78fc::1;
 allow 2a04:52c0:105:98a3::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1589,7 +1588,6 @@ allow 2a0b:f4c2::6;
 allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
-allow 2a0c:2500:571:7ca:7683:56ca:e852:76a1;
 allow 2a0c:5700:3133:1705:be24:11ff:fe0f:9e53;
 allow 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
 allow 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
@@ -1622,7 +1620,6 @@ allow 2a0d:bbc7:0:1::3cc;
 allow 2a0d:bbc7:0:1::3d5;
 allow 2a0d:bbc7:0:1::7f;
 allow 2a0d:c2c0:1:4::2;
-allow 2a0d:c580:1:3:95::1;
 allow 2a0e:1d80:13:51e8::1;
 allow 2a0e:1d80:17:6f8d::1;
 allow 2a0e:4005:1002:ffff:185:40:4:100;
@@ -1719,8 +1716,6 @@ allow 2a12:a800:2:1:45:80:158:23;
 allow 2a12:a800:2:1:45:80:158:27;
 allow 2a12:a800:2:1:45:80:158:69;
 allow 2a13:d207:0:461::1;
-allow 2c0f:6c0:0:2::6983;
-allow 2c0f:6c0:0:3::479d;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.44.238.25;
@@ -1833,6 +1828,7 @@ allow 45.95.169.230;
 allow 45.95.169.24;
 allow 45.95.169.255;
 allow 46.165.243.36;
+allow 46.182.21.248;
 allow 46.23.109.25;
 allow 46.232.251.191;
 allow 46.234.47.105;
@@ -1847,6 +1843,7 @@ allow 51.15.59.15;
 allow 51.195.166.174;
 allow 51.222.142.67;
 allow 51.38.225.46;
+allow 51.68.189.231;
 allow 51.79.24.181;
 allow 51.79.30.185;
 allow 51.81.222.62;
@@ -1856,7 +1853,6 @@ allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.227;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1867,6 +1863,7 @@ allow 5.255.115.58;
 allow 5.255.117.56;
 allow 5.255.118.218;
 allow 5.255.121.71;
+allow 5.255.123.121;
 allow 5.255.123.158;
 allow 5.255.123.164;
 allow 5.255.125.196;
@@ -1939,7 +1936,6 @@ allow 84.16.224.227;
 allow 84.211.226.13;
 allow 84.239.46.144;
 allow 84.247.183.128;
-allow 84.252.120.131;
 allow 85.239.41.130;
 allow 85.93.218.204;
 allow 86.54.28.49;
@@ -1950,6 +1946,7 @@ allow 87.118.116.90;
 allow 87.118.122.30;
 allow 87.118.122.51;
 allow 87.120.254.132;
+allow 88.151.117.146;
 allow 88.80.20.86;
 allow 88.80.26.2;
 allow 88.80.26.3;
