--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -150,7 +150,6 @@ deny 128.127.180.156;
 deny 128.31.0.13;
 deny 130.193.10.21;
 deny 130.193.15.186;
-deny 130.193.15.79;
 deny 135.225.96.187;
 deny 136.244.111.163;
 deny 138.59.18.110;
@@ -687,6 +686,7 @@ deny 193.26.115.43;
 deny 193.26.115.61;
 deny 193.32.162.96;
 deny 193.36.132.21;
+deny 193.70.80.213;
 deny 194.15.112.133;
 deny 194.15.113.118;
 deny 194.15.115.212;
@@ -717,7 +717,7 @@ deny 195.80.151.242;
 deny 195.88.74.206;
 deny 198.144.178.185;
 deny 198.144.178.187;
-deny 198.167.206.152;
+deny 198.167.206.199;
 deny 198.251.84.163;
 deny 198.251.84.237;
 deny 198.251.88.18;
@@ -1012,6 +1012,7 @@ deny 23.154.177.10;
 deny 23.154.177.11;
 deny 23.154.177.12;
 deny 23.154.177.13;
+deny 23.154.177.14;
 deny 23.154.177.15;
 deny 23.154.177.16;
 deny 23.154.177.17;
@@ -1588,6 +1589,7 @@ deny 2a0b:f4c2::6;
 deny 2a0b:f4c2::7;
 deny 2a0b:f4c2::8;
 deny 2a0b:f4c2::9;
+deny 2a0c:2500:571:7ca:7683:56ca:e852:76a1;
 deny 2a0c:5700:3133:1705:be24:11ff:fe0f:9e53;
 deny 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
 deny 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
@@ -1605,7 +1607,6 @@ deny 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
-deny 2a0d:8140:1fff:4a9a::1;
 deny 2a0d:bbc7:0:1::10a;
 deny 2a0d:bbc7:0:1::1df;
 deny 2a0d:bbc7:0:1::254;
@@ -1743,7 +1744,6 @@ deny 45.128.133.242;
 deny 45.130.60.248;
 deny 45.132.246.245;
 deny 45.134.225.36;
-deny 45.137.99.14;
 deny 45.138.16.107;
 deny 45.138.16.113;
 deny 45.138.16.178;
@@ -1936,6 +1936,7 @@ deny 84.16.224.227;
 deny 84.211.226.13;
 deny 84.239.46.144;
 deny 84.247.183.128;
+deny 84.252.120.131;
 deny 85.239.41.130;
 deny 85.93.218.204;
 deny 86.54.28.49;
